# fake-cost-allocations

./: .env.example  .gitignore  .kiroignore  README.md  kiro-output.md  pyproject.toml  smoke_test.py
app/: auth.py  config.py  db.py  main.py  schemas.py  seed.py
app/routers/: actual.py  auth.py  budget.py  reference.py  step1_assignments.py  step2_distributions.py  step3_labels.py  step4_review.py
